--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
-/.idea
-*.egg-info
-*.pot
-*.py[co]
-.tox/
+.idea
 __pycache__
 MANIFEST
-dist/
-docs/_build/
-docs/locale/
-node_modules/
-tests/coverage_html/
-tests/.coverage
-build/
-tests/report/
 venv
 migrations
 db.sqlite3
