--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ itypes==1.2.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 oauthlib==3.1.0
+pkg-resources==0.0.0
 pycparser==2.20
 PyJWT==2.0.1
 python3-openid==3.2.0
